--- a/analysis/playground.ipynb
+++ b/analysis/playground.ipynb
@@ -984,7 +984,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = hp.pickle_load('samples', 'testing')# chain_24_15000"
+    "test = hp.pickle_load('samples', 'Experiment_4_grouping_samples_chain_24_10000')# chain_24_15000"
    ]
   },
   {
